docs/i18n/hi/docusaurus-plugin-content-docs/version-0.19.0/install.md
---
sidebar_position: 3
sidebar_label: इंस्टॉलेशन
title: इंस्टॉलेशन गाइड
description: स्टैंडअलोन रिलीज़ फाइल, Composer, सोर्स कोड या Docker से PHP Antimalware Scanner इंस्टॉल करें।
---

# इंस्टॉलेशन गाइड

त्वरित उपयोग के लिए एकल स्टैंडअलोन रिलीज़ फाइल चुनें या निर्भरता प्रबंधन के लिए Composer का उपयोग करें।

:::info पूर्वापेक्षाएं
PHP 7.4 या उच्चतर आवश्यक है। इंस्टॉल करने से पहले [आवश्यकताएं](requirements) देखें।
:::

## स्टैंडअलोन रिलीज़ फाइल

[GitHub रिलीज़ पेज](https://github.com/marcocesarato/PHP-Antimalware-Scanner/releases) से नवीनतम `scanner` फाइल डाउनलोड करें या सीधे वर्तमान संस्करण प्राप्त करें:

```bash
curl --fail --silent --show-error --location \
  --output scanner \
  https://raw.githubusercontent.com/marcocesarato/PHP-Antimalware-Scanner/master/dist/scanner
```

संस्करण सत्यापित करें और केवल-रिपोर्ट स्कैन चलाएं:

```bash
php scanner --version
php scanner /var/www/example --lite --report
```

स्कैनर को उस डायरेक्टरी के बाहर रखें जिसे आप स्कैन कर रहे हैं।

:::caution TLS सत्यापन सक्रिय रखें
`--no-check-certificate` का उपयोग न करें। प्रमाणपत्र त्रुटि नेटवर्क या ट्रस्ट समस्याओं का संकेत देती है जिन्हें ठीक किया जाना चाहिए।
:::

## Composer

पैकेज [`marcocesarato/amwscan`](https://packagist.org/packages/marcocesarato/amwscan) के रूप में प्रकाशित है।

### प्रोजेक्ट में इंस्टॉल करें

```bash
composer require marcocesarato/amwscan
php vendor/marcocesarato/amwscan/src/index.php /var/www/example --lite --report
```

### ग्लोबल इंस्टॉलेशन

```bash
composer global require marcocesarato/amwscan
php "$(composer global config home)/vendor/marcocesarato/amwscan/src/index.php" /var/www/example --lite --report
```

## सोर्स कोड से

```bash
git clone https://github.com/marcocesarato/PHP-Antimalware-Scanner.git
cd PHP-Antimalware-Scanner
composer install
php src/index.php /var/www/example --lite --report
```

## Docker

```bash
docker build --tag amwscan .
docker run --rm \
  --volume "/var/www/example:/scan:ro" \
  --volume "$PWD/amwscan-output:/output" \
  amwscan scanner /scan --lite --report --path-report=/output/report.html
```

## वर्डप्रेस प्लगइन

[वर्डप्रेस प्लगइन इंस्टॉल करें](wordpress-plugin#install-and-activate)
